# ecphory

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SPRINT-TASKS.md  rust-toolchain.toml
docs/: SPRINT-TASKS.md  fabric-viewer.html  immune-anomaly-response-runbook.md  intent-architecture.html  intent-paradigm-spec-v0.2.md  overview-section.html  p53-response-runbook.md
kernel-aarch64/: Cargo.toml
kernel-aarch64/src/: main.rs
kernel-core/: Cargo.toml
kernel-core/src/: fabric.rs  framebuffer.rs  heap.rs  inference.rs  intent.rs  keyboard.rs  lib.rs  observe.rs  ops.rs  snapshot.rs  storage_agent.rs  storage_inventory.rs  tesseract.rs
kernel-core/src/generative_model/: agents.rs  causal_graph.rs  constitution.rs  device_region.rs  history.rs  meta_region.rs  mod.rs  operator_region.rs  pattern_engine.rs  persistence_region.rs  preferences.rs
kernel-core/src/model/: discrete.rs  mod.rs
kernel-uefi-common/: Cargo.toml
kernel-uefi-common/src/: lib.rs
kernel-x86_64/: Cargo.toml  build.rs
kernel-x86_64/src/: arch.rs  main.rs
runner-aarch64/: Cargo.toml  build.rs
runner-aarch64/src/: main.rs
runner-x86_64/: Cargo.toml  build.rs
runner-x86_64/src/: main.rs
scripts/: mkimg-aarch64.sh  mkimg-x86_64.sh
scripts/parallels-mac/: README.md  lifecycle-test.sh  provision-vm.sh  swap-kernel.sh  typetext.sh
src/: lib.rs
src/bridge/: bridge_fabric.rs  debug.rs  decay.rs  fabric_trait.rs  mechanical.rs  mod.rs  observability.rs  p53.rs  semantic.rs  subscription.rs
src/comms/: decision.rs  degraded.rs  handoff.rs  message.rs  mod.rs  observe.rs  operator.rs  projection.rs  provenance.rs  thread.rs
src/confidence/: mod.rs
src/constraint/: mod.rs
src/context/: mod.rs
src/distributed/: conflict.rs  gossip.rs  mod.rs  transport.rs  vclock.rs
src/embedding/: bow.rs  mod.rs
src/fabric/: mod.rs
src/identity/: causal_position.rs  content_fingerprint.rs  cross_attestation.rs  edit_mode.rs  genesis.rs  mod.rs  node_identity.rs  node_signature.rs  quarantine.rs  region.rs  trust_weight.rs  voice_print.rs
src/immune/: aggregation.rs  baseline.rs  bootstrap.rs  cell_agent.rs  cognitive_map.rs  health.rs  inheritance.rs  mod.rs  multidim.rs  opacity.rs  specialization.rs
src/inference/: action.rs  energy.rs  mod.rs  policy.rs
src/node/: mod.rs
src/persist/: mod.rs  serial.rs
src/signature/: mod.rs
src/temporal/: mod.rs
src/tracer/: mod.rs
src/work/: claim.rs  gravity.rs  integration.rs  intent.rs  mod.rs  topology.rs  visibility.rs
tests/: distributed_integration.rs  embedding_integration.rs  fabric_integration.rs  inference_integration.rs  persistence_integration.rs  spec5_identity.rs  spec6_immune.rs  spec7_comms.rs  spec8_bridge.rs
