[package]
name = "ecphory"
version = "0.10.0"
edition = "2021"
authors = ["Jeremy Jones"]
description = "The Ecphory Fabric — a computing paradigm where intent is the atomic primitive"
license = "Apache-2.0"
repository = "https://github.com/jtjones09/ecphory"
readme = "README.md"
keywords = ["intent-computing", "semantic-fabric", "resonance", "ai-architecture", "confidence-surfaces"]
categories = ["algorithms", "data-structures", "science"]
exclude = ["docs/", "tests/"]

[dependencies]
# Bootstrap dependencies (Law 8: Legacy Acknowledged, Not Worshipped)
# These will be replaced as the fabric matures.

# UUID generation — for LineageId (stable identity across mutations)
uuid = { version = "1", features = ["v4"] }

# Serialization — for fabric persistence
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "ecphory"
path = "src/lib.rs"

[[bin]]
name = "intent"
path = "src/bin/intent.rs"
