[package]
name = "ecphory"
version = "0.10.0"
edition = "2021"
authors = ["Jeremy Jones"]
description = "The Ecphory Fabric — a computing paradigm where intent is the atomic primitive"
license = "Apache-2.0"
repository = "https://github.com/jtjones09/ecphory"
readme = "README.md"
keywords = ["intent-computing", "semantic-fabric", "resonance", "ai-architecture", "confidence-surfaces"]
categories = ["algorithms", "data-structures", "science"]
exclude = ["docs/", "tests/"]

[dependencies]
# Bootstrap dependencies (Law 8: Legacy Acknowledged, Not Worshipped)
# These will be replaced as the fabric matures.

# UUID generation — for LineageId (stable identity across mutations)
uuid = { version = "1", features = ["v4"] }

# Serialization — for fabric persistence
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# BLAKE3 — content fingerprinting (Spec 5 §2.1.1, §3.1)
blake3 = "1"

# Ed25519 — agent voice prints and selective signing (Spec 5 §3.2, §3.3)
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["std"] }

# Observability — structured tracing + metrics primitives (Spec 8 §8.5).
# `tracing` macros open spans on every public bridge method and emit
# structured events. `metrics` declares counter/gauge/histogram handles
# that downstream consumers (Nabu via metrics-exporter-prometheus) can
# scrape; without an exporter installed, the macros are no-ops, so the
# library stays drop-in for callers that don't care about telemetry.
tracing = "0.1"
metrics = "0.24"

[dev-dependencies]
# Deterministic-seeded randomness for the Spec 6 immune-system
# detection-rate tests. `SmallRng` is fine for statistical tests; we
# don't need cryptographic-grade randomness in tests.
rand = { version = "0.8", features = ["small_rng"] }

[lib]
name = "ecphory"
path = "src/lib.rs"

[[bin]]
name = "intent"
path = "src/bin/intent.rs"
