[package]
name = "ecphory"
version = "0.10.0"
edition = "2021"
authors = ["Jeremy Jones"]
description = "The Ecphory Fabric — a computing paradigm where intent is the atomic primitive"
license = "Apache-2.0"
repository = "https://github.com/jtjones09/ecphory"
readme = "README.md"
keywords = ["intent-computing", "semantic-fabric", "resonance", "ai-architecture", "confidence-surfaces"]
categories = ["algorithms", "data-structures", "science"]
exclude = ["docs/", "tests/"]

[dependencies]
# Bootstrap dependencies (Law 8: Legacy Acknowledged, Not Worshipped)
# These will be replaced as the fabric matures.

# UUID generation — for LineageId (stable identity across mutations)
uuid = { version = "1", features = ["v4"] }

# Serialization — for fabric persistence
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# BLAKE3 — content fingerprinting (Spec 5 §2.1.1, §3.1)
blake3 = "1"

# Ed25519 — agent voice prints and selective signing (Spec 5 §3.2, §3.3)
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["std"] }

# Observability — structured tracing + metrics primitives (Spec 8 §8.5).
# `tracing` macros open spans on every public bridge method and emit
# structured events. `metrics` declares counter/gauge/histogram handles
# that downstream consumers (Nabu via metrics-exporter-prometheus) can
# scrape; without an exporter installed, the macros are no-ops, so the
# library stays drop-in for callers that don't care about telemetry.
tracing = "0.1"
metrics = "0.24"

[dev-dependencies]
# Deterministic-seeded randomness for the Spec 6 immune-system
# detection-rate tests. `SmallRng` is fine for statistical tests; we
# don't need cryptographic-grade randomness in tests.
rand = { version = "0.8", features = ["small_rng"] }

[lib]
name = "ecphory"
path = "src/lib.rs"

[[bin]]
name = "intent"
path = "src/bin/intent.rs"

[[bin]]
name = "immune-bootstrap"
path = "src/bin/immune-bootstrap.rs"

# ---------- Workspace (nucleation branch only) ----------
#
# On the `nucleation` branch the bare-metal kernel crates live here as
# workspace members alongside the fabric crate. `default-members = ["."]`
# keeps `cargo build` / `cargo test` at the repo root building only the
# existing ecphory crate — the kernel crates require nightly + UEFI
# targets and are built explicitly:
#
#     cargo +nightly build --release -p runner-aarch64
#     cargo +nightly build --release -p runner-x86_64
#
# Merging this branch to `main` is the architectural moment when the
# application-layer fabric and the bare-metal kernel data models
# converge. Until then they coexist under one repo without sharing
# code (no_std vs std, single-loop vs threaded). See
# nisaba/positions/nucleation-architecture.md for the full vision and
# nisaba/projects/ecphory/handoffs/handoff-cc-nucleation.md for the
# 11-step plan currently in flight.
[workspace]
members = [
    ".",
    "kernel-core",
    "kernel-uefi-common",
    "kernel-x86_64",
    "kernel-aarch64",
    "runner-x86_64",
    "runner-aarch64",
]
default-members = ["."]
resolver = "2"
