[package]
name = "kernel-x86_64"
version = "0.2.0"
edition = "2021"
authors = ["Jeremy Jones"]
description = "Ecphory OS — x86_64 binary (UEFI app, mirror of kernel-aarch64)"

[dependencies]
kernel-core = { path = "../kernel-core" }
kernel-uefi-common = { path = "../kernel-uefi-common" }
uefi = { version = "0.37", features = ["alloc", "panic_handler"] }
spin = { version = "0.10", default-features = false, features = ["mutex", "spin_mutex"] }
raw-cpuid = { version = "11", default-features = false }
x86_64 = { version = "0.15", default-features = false, features = ["instructions"] }

[[bin]]
name = "kernel-x86_64"
path = "src/main.rs"
test = false
bench = false
