[package]
name = "runner-x86_64"
version = "0.2.0"
edition = "2021"
authors = ["Jeremy Jones"]
description = "Build and run the x86_64 UEFI ecphory image in qemu-system-x86_64"

[dependencies]

[build-dependencies]
kernel-x86_64 = { path = "../kernel-x86_64", artifact = "bin", target = "x86_64-unknown-uefi" }

[[bin]]
name = "runner-x86_64"
path = "src/main.rs"
